--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ Released   : 20140207
 			<div id="menu">
 				<ul>
 					<li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
-					<li><a href="#" accesskey="2" title="">Our Clients</a></li>
-					<li><a href="#" accesskey="3" title="">About Us</a></li>
-					<li><a href="#" accesskey="4" title="">Careers</a></li>
-					<li><a href="#" accesskey="5" title="">Contact Us</a></li>
+					<li><a href="#" accesskey="2" title="">Research</a></li>
+					<li><a href="#" accesskey="3" title="">Teaching</a></li>
+					<li><a href="#" accesskey="4" title="">CV</a></li>
+					<li><a href="#" accesskey="5" title="">Contact Me</a></li>
 				</ul>
 			</div>
 		</div>
