--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hello, world!</title>
+    <title>Julia Nakhleh</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>My first web page.</p>
+    <h1>Julia Nakhleh</h1>
+    <p>My website.</p>
   </body>
 </html>
