--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <span class="text-primary">Nakhleh</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <!--<a href="mailto:jnakhleh@lanl.gov">jnakhleh@lanl.gov</a> ·-->
+                        <a href="mailto:jnakhleh@lanl.gov">jnakhleh@lanl.gov</a> · 
                         <a href="mailto:jnakhleh@asu.edu">jnakhleh@asu.edu</a>
                     </div>
                     <p class="lead mb-5">I'm a post-bachelor's research assistant at Los Alamos National Laboratory (LANL) working on machine learning for scientific analysis and high performance computing. I got my B.S. in Computer Science from Arizona State University in 2019. I did my undergraduate honors thesis on deep learning for generalized planning with Dr. Siddharth Srivastava's Autonomous Agents and Intelligent Robotics (AAIR) lab at ASU. <br> <br> My research interests are in machine learning theory and algorithm development for applications including (but not limited to) scientific analysis, optimization, high-performance computing, and natural language processing. </p>
