--- a/index.html
+++ b/index.html
@@ -65,8 +65,14 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Journal Articles</h3>
+                            <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "Exploring Sensitivity of ICF Outputs to Design Parameters in Experiments Using Machine Learning." Paper submitted to <i>IEEE Transactions on Plasma Science</i>. Available at <a href="http://arxiv.org/abs/2010.04254"> arXiv:2010.04254</a>.</p>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Conference Presentations</h3>
-                            <p><br>Nakhleh, J., Fernández-Godino, M., Grosskopf, M., Wilson, B., & Srinivasan, G. (2020). Using Machine Learning to Identify Physical Relationships and Quantify Uncertainties in ICF. Poster session presented at: <b><i> ASME V&V Verification and Validation Symposium </i></b> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
+                            <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "Using Machine Learning to Identify Physical Relationships and Quantify Uncertainties in ICF." Poster session presented at <i> ASME V&V Verification and Validation Symposium </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
                             <a href="https://julianakhleh.github.io/assets/documents/vvuq_slides_julia_nakhleh.pdf"> [slides] </a></p>
                             <ul><li>Student Presentation Award Winner (2<sup>nd</sup> place)</li></ul>
                         </div>
@@ -74,7 +80,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Undergraduate Honors Thesis</h3>
-                            <p><br>Nakhleh, J., Srivastava, S. (2019). Learning Generalized Heuristics using Deep Neural Networks.
+                            <p><br><b>Nakhleh, J.</b>, Srivastava, S. (2019). "Learning Generalized Heuristics using Deep Neural Networks."
                             <a href="https://julianakhleh.github.io/assets/documents/Nakhleh_J_Spring_2019.pdf"> [pdf] </a>
                             <a href="https://julianakhleh.github.io/assets/documents/Nakhleh_J_Spring_2019_defense_slides.pdf"> [slides] </a></p>
                         </div>
