--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/julia-nakhleh-64a611117"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/julianakhleh"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://orcid.org/0000-0002-0105-2924"><i class="fab fa-orcid"></i></a>
                         <!--<a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>-->
                         <!--<a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>-->
                     </div>
