--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta property="og:image" content="https://julianakhleh.github.io/assets/img/profile.jpg" />
+        <meta property="og:title" content="Julia Nakhleh's Personal Website" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://julianakhleh.github.io/" />
         <title>Julia Nakhleh</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
