--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="Julia Nakhleh's Personal Website" />
         <meta name="author" content="" />
         <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://julianakhleh.github.io/assets/img/profile.jpg" />
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Julia Nakhleh's Personal Website" />
         <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
         <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://julianakhleh.github.io/" />
         <title>Julia Nakhleh</title>
+        <description>Julia Nakhleh's Personal Website</description>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
