--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <!-- <meta name="description" content="Julia Nakhleh's Personal Website" /> -->
-        <meta name="description" content=""
+        <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="google-site-verification" content="39TtCIYymas8QvjzIcIrvU-Z6EYxd2haWul8Ac5h2ME" />
         <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://julianakhleh.github.io/assets/img/profile.jpg" />
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Julia Nakhleh's Personal Website" />
         <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
