--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons/css/academicons.min.css">
         <link href="css/styles.css" rel="stylesheet" />
-        <link href="css/academicons.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -62,6 +62,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/julia-nakhleh-64a611117"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/julianakhleh"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://orcid.org/0000-0002-0105-2924"><i class="fab fa-orcid"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=hOy5X6MAAAAJ&hl=en"><i class="ai ai-google-scholar"></i></a>
                         <!--<a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>-->
                         <!--<a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>-->
                     </div>
