--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Journal Articles</h3>
                             <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "Exploring Sensitivity of ICF Outputs to Design Parameters in Experiments Using Machine Learning." Paper submitted to <i>IEEE Transactions on Plasma Science</i>. Available at <a href="http://arxiv.org/abs/2010.04254"> arXiv:2010.04254</a>.</p>
+                            <p><br>Fernández-Godino, M., Grosskopf, M., <b>Nakhleh, J.</b>, Wilson, B., Kline, J. and Srinivasan, G. (2020). "Identifying Entangled Physics Relationships through Sparse Matrix Decomposition to Inform Plasma Fusion Design." Paper submitted to <i>IEEE Transactions on Plasma Science</i>. Available at <a href="https://arxiv.org/abs/2010.15208"> arXiv:2010.15208</a>.</p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
