--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Conference Presentations</h3>
+                            <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "Exploring ICF Experimental Relationships using Machine Learning." Poster session presented at <i> High Temperature Plasma Diagnostics Conference </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
+                            <a href="https://julianakhleh.github.io/assets/documents/HTPD_2020_julia_nakhleh.pdf"> [slides] </a></p>
                             <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "ICF Design Analysis using Machine Learning." Lightning talk given at the <i>New York Scientific Data Summit</i>.
                             <a href="https://julianakhleh.github.io/assets/documents/NYSDS_icf_ml_julia_nakhleh.pdf"> [slides] </a></p>
                             <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "Using Machine Learning to Identify Physical Relationships and Quantify Uncertainties in ICF." Poster session presented at <i> ASME V&V Verification and Validation Symposium </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
