--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
                         <span class="text-primary">Nakhleh</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <a href="mailto:jnakhleh@lanl.gov">jnakhleh@lanl.gov</a> · 
-                        <a href="mailto:jnakhleh@asu.edu">jnakhleh@asu.edu</a>
+                        <a href="mailto:jnakhleh@wisc.edu">jnakhleh@wisc.edu</a>
                     </div>
-                    <p class="lead mb-5">I'm a post-bac researcher at Los Alamos National Laboratory (LANL) with the CCS-7 (Applied Computer Science) and XCP-8 (Computational Physics Verification & Analysis) groups. At LANL, I work on designing and applying machine learning methods to a variety of problems in physics and high-performance computing. See my <a href="https://julianakhleh.github.io/assets/documents/Julia_Nakhleh_CV.pdf">CV</a> for more detailed descriptions of my current and past projects. <br> <br> I got my B.S. in Computer Science from Arizona State University in 2019, along with a B.A. in Spanish. At ASU, I did my undergraduate honors thesis on deep learning for generalized planning with Dr. Siddharth Srivastava's Autonomous Agents and Intelligent Robots (AAIR) lab. I also performed research on the use of FPGAs for distributed deep learning with the Virtualized Infrastructures, Systems and Applications (VISA) lab at ASU for my senior capstone project. <br> <br> I am broadly interested in the theoretical and statistical foundations of machine learning, particularly as they relate to causal inference, uncertainty quantification, and interpretability/explainability.
+                    <p class="lead mb-5">I'm a first year PhD student in Computer Sciences at the University of Wisconsin-Madison. Previously, I was a post-bac researcher at Los Alamos National Laboratory (LANL) with the CCS-7 (Applied Computer Science) and XCP-8 (Computational Physics Verification & Analysis) groups. At LANL, I worked on designing and applying machine learning methods to a variety of problems in physics and high-performance computing. See my <a href="https://julianakhleh.github.io/assets/documents/Julia_Nakhleh_CV.pdf">CV</a> for more detailed descriptions of my current and past projects. <br> <br> I got my B.S. in Computer Science from Arizona State University in 2019, along with a B.A. in Spanish. At ASU, I did my undergraduate honors thesis on deep learning for generalized planning with Dr. Siddharth Srivastava's Autonomous Agents and Intelligent Robots (AAIR) lab. I also performed research on the use of FPGAs for distributed deep learning with the Virtualized Infrastructures, Systems and Applications (VISA) lab at ASU for my senior capstone project. <br> <br> I am broadly interested in the theoretical and statistical foundations of machine learning, particularly as they relate to causal inference, uncertainty quantification, and interpretability/explainability.
 
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/julia-nakhleh-64a611117"><i class="fab fa-linkedin-in"></i></a>
@@ -77,18 +76,18 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Journal Articles</h3>
-                            <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "Exploring Sensitivity of ICF Outputs to Design Parameters in Experiments Using Machine Learning." Accepted for publication in <i>IEEE Transactions on Plasma Science</i>. Available at <a href="http://arxiv.org/abs/2010.04254"> arXiv:2010.04254</a>.</p>
-                            <p><br>Fernández-Godino, M., Grosskopf, M., <b>Nakhleh, J.</b>, Wilson, B., Kline, J. and Srinivasan, G. (2020). "Identifying Entangled Physics Relationships through Sparse Matrix Decomposition to Inform Plasma Fusion Design." Accepted for publication in <i>IEEE Transactions on Plasma Science</i>. Available at <a href="https://arxiv.org/abs/2010.15208"> arXiv:2010.15208</a>.</p>
+                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan, <a href="https://ieeexplore.ieee.org/document/9466371">"Exploring Sensitivity of ICF Outputs to Design Parameters in Experiments Using Machine Learning,"</a> in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 7, pp. 2238-2246, July 2021, doi: 10.1109/TPS.2021.3090299.</p>
+                            <p><br>M. G. Fernández-Godino, M. J. Grosskopf, <b>J. B. Nakhleh</b>, B. M. Wilson, J. L. Kline, and G. Srinivasan, <a href="https://ieeexplore.ieee.org/document/9497511">"Identifying Entangled Physics Relationships through Sparse Matrix Decomposition to Inform Plasma Fusion Design,"</a> in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 8, pp. 2410-2419, Aug. 2021, doi: 10.1109/TPS.2021.3098482.</p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Conference Presentations</h3>
-                            <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "Exploring ICF Experimental Relationships using Machine Learning." Poster session presented at <i> High Temperature Plasma Diagnostics Conference </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
+                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan. (2020). "Exploring ICF Experimental Relationships using Machine Learning." Poster session presented at <i> High Temperature Plasma Diagnostics Conference </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
                             <a href="https://julianakhleh.github.io/assets/documents/HTPD_2020_julia_nakhleh.pdf"> [slides] </a></p>
-                            <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "ICF Design Analysis using Machine Learning." Lightning talk given at the <i>New York Scientific Data Summit</i>.
+                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan. (2020). "ICF Design Analysis using Machine Learning." Lightning talk given at the <i>New York Scientific Data Summit</i>.
                             <a href="https://julianakhleh.github.io/assets/documents/NYSDS_icf_ml_julia_nakhleh.pdf"> [slides] </a></p>
-                            <p><br><b>Nakhleh, J.</b>, Fernández-Godino, M., Grosskopf, M., Wilson, B., Kline, J. and Srinivasan, G. (2020). "Using Machine Learning to Identify Physical Relationships and Quantify Uncertainties in ICF." Poster session presented at <i> ASME V&V Verification and Validation Symposium </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
+                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan. (2020). "Using Machine Learning to Identify Physical Relationships and Quantify Uncertainties in ICF." Poster session presented at <i> ASME V&V Verification and Validation Symposium </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
                             <a href="https://julianakhleh.github.io/assets/documents/vvuq_slides_julia_nakhleh.pdf"> [slides] </a></p>
                             <ul><li>Student Presentation Award Winner (2<sup>nd</sup> place)</li></ul>
                         </div>
@@ -96,7 +95,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Undergraduate Honors Thesis</h3>
-                            <p><br><b>Nakhleh, J.</b>, Srivastava, S. (2019). "Learning Generalized Heuristics using Deep Neural Networks."
+                            <p><br><b>J. B. Nakhleh</b> and S. Srivastava. (2019). "Learning Generalized Heuristics using Deep Neural Networks."
                             <a href="https://julianakhleh.github.io/assets/documents/Nakhleh_J_Spring_2019.pdf"> [pdf] </a>
                             <a href="https://julianakhleh.github.io/assets/documents/Nakhleh_J_Spring_2019_defense_slides.pdf"> [slides] </a></p>
                         </div>
