--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Journal Articles</h3>
-                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan, <a href="https://ieeexplore.ieee.org/document/9466371">"Exploring Sensitivity of ICF Outputs to Design Parameters in Experiments Using Machine Learning,"</a> in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 7, pp. 2238-2246, July 2021, doi: 10.1109/TPS.2021.3090299.</p>
-                            <p><br>M. G. Fernández-Godino, M. J. Grosskopf, <b>J. B. Nakhleh</b>, B. M. Wilson, J. L. Kline, and G. Srinivasan, <a href="https://ieeexplore.ieee.org/document/9497511">"Identifying Entangled Physics Relationships through Sparse Matrix Decomposition to Inform Plasma Fusion Design,"</a> in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 8, pp. 2410-2419, Aug. 2021, doi: 10.1109/TPS.2021.3098482.</p>
+                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan, "Exploring Sensitivity of ICF Outputs to Design Parameters in Experiments Using Machine Learning," in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 7, pp. 2238-2246, July 2021, <a href="https://ieeexplore.ieee.org/document/9466371">doi: 10.1109/TPS.2021.3090299.</a></p>
+                            <p><br>M. G. Fernández-Godino, M. J. Grosskopf, <b>J. B. Nakhleh</b>, B. M. Wilson, J. L. Kline, and G. Srinivasan, "Identifying Entangled Physics Relationships through Sparse Matrix Decomposition to Inform Plasma Fusion Design," in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 8, pp. 2410-2419, Aug. 2021, <a href="https://ieeexplore.ieee.org/document/9497511">doi: 10.1109/TPS.2021.3098482.</a></p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
