--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <meta name="google-site-verification" content="39TtCIYymas8QvjzIcIrvU-Z6EYxd2haWul8Ac5h2ME" />
-        <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://julianakhleh.github.io/assets/img/profile.jpg" />
+<!--        <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://julianakhleh.github.io/assets/img/profile.jpg" />-->
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Julia Nakhleh's Personal Website" />
         <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
         <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://julianakhleh.github.io/" />
@@ -33,7 +33,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Julia Nakhleh</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+<!--                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>-->
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -56,7 +56,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:jnakhleh@wisc.edu">jnakhleh@wisc.edu</a>
                     </div>
-                    <p class="lead mb-5">I'm a first year PhD student in Computer Sciences at the University of Wisconsin-Madison, working on out-of-distribution (OOD) detection in deep learning with <a href="https://nowak.ece.wisc.edu/">Robert Nowak</a> and <a href="http://pages.cs.wisc.edu/~sharonli/">Sharon Yixuan Li</a>. Previously, I was a post-bac researcher at Los Alamos National Laboratory with the CCS-7 (Applied Computer Science) and XCP-8 (Computational Physics Verification & Analysis) groups, where I worked on designing and applying machine learning methods to a variety of problems in physics and high-performance computing. <br> <br> I got my B.S. in Computer Science from Arizona State University in 2019, along with a B.A. in Spanish. At ASU, I did my undergraduate honors thesis on deep learning for generalized planning with <a href="http://siddharthsrivastava.net/">Siddharth Srivastava</a>'s Autonomous Agents and Intelligent Robots (AAIR) lab. I also performed research on the use of FPGAs for distributed deep learning with ASU's Virtualized Infrastructures, Systems and Applications (VISA) lab. <br> <br> I am broadly interested in exploring the theoretical and statistical foundations of machine learning in order to build models that are robust, interpretable, and uncertainty-aware.
+                    <p class="lead mb-5">I'm a first year PhD student in Computer Sciences at the University of Wisconsin-Madison, working on out-of-distribution (OOD) detection in deep learning with <a href="https://nowak.ece.wisc.edu/">Robert Nowak</a> and <a href="http://pages.cs.wisc.edu/~sharonli/">Sharon Yixuan Li</a>. <br> <br> Previously, I was a post-bac researcher at Los Alamos National Laboratory with the CCS-7 (Applied Computer Science) and XCP-8 (Computational Physics Verification & Analysis) groups, where I did applied machine learning research in the areas of physics and high-performance computing. Before that, I got my B.S. in Computer Science from Arizona State University in 2019, along with a B.A. in Spanish. <br> <br> I am broadly interested in exploring the theoretical and statistical foundations of machine learning in order to build models that are robust, interpretable, and uncertainty-aware.
 
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/julia-nakhleh-64a611117"><i class="fab fa-linkedin-in"></i></a>
@@ -78,26 +78,6 @@
                             <h3 class="mb-0">Journal Articles</h3>
                             <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan, "Exploring Sensitivity of ICF Outputs to Design Parameters in Experiments Using Machine Learning," in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 7, pp. 2238-2246, July 2021, <a href="https://ieeexplore.ieee.org/document/9466371">doi: 10.1109/TPS.2021.3090299.</a></p>
                             <p><br>M. G. Fernández-Godino, M. J. Grosskopf, <b>J. B. Nakhleh</b>, B. M. Wilson, J. L. Kline, and G. Srinivasan, "Identifying Entangled Physics Relationships through Sparse Matrix Decomposition to Inform Plasma Fusion Design," in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 8, pp. 2410-2419, Aug. 2021, <a href="https://ieeexplore.ieee.org/document/9497511">doi: 10.1109/TPS.2021.3098482.</a></p>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Conference Presentations</h3>
-                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan. (2020). "Exploring ICF Experimental Relationships using Machine Learning." Poster session presented at <i> High Temperature Plasma Diagnostics Conference </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
-                            <a href="https://julianakhleh.github.io/assets/documents/HTPD_2020_julia_nakhleh.pdf"> [slides] </a></p>
-                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan. (2020). "ICF Design Analysis using Machine Learning." Lightning talk given at the <i>New York Scientific Data Summit</i>.
-                            <a href="https://julianakhleh.github.io/assets/documents/NYSDS_icf_ml_julia_nakhleh.pdf"> [slides] </a></p>
-                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan. (2020). "Using Machine Learning to Identify Physical Relationships and Quantify Uncertainties in ICF." Poster session presented at <i> ASME V&V Verification and Validation Symposium </i> (conference held virtually due to COVID-19; presented as short talk due to virtual format).
-                            <a href="https://julianakhleh.github.io/assets/documents/vvuq_slides_julia_nakhleh.pdf"> [slides] </a></p>
-                            <ul><li>Student Presentation Award Winner (2<sup>nd</sup> place)</li></ul>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Undergraduate Honors Thesis</h3>
-                            <p><br><b>J. B. Nakhleh</b> and S. Srivastava. (2019). "Learning Generalized Heuristics using Deep Neural Networks."
-                            <a href="https://julianakhleh.github.io/assets/documents/Nakhleh_J_Spring_2019.pdf"> [pdf] </a>
-                            <a href="https://julianakhleh.github.io/assets/documents/Nakhleh_J_Spring_2019_defense_slides.pdf"> [slides] </a></p>
                         </div>
                     </div>
                 </div>
