update CV and website

--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
                     <div class="subheading mb-5">
                         <a href="mailto:jnakhleh@wisc.edu">jnakhleh@wisc.edu</a>
                     </div>
-                    <p class="lead mb-5">I'm a first year PhD student in Computer Sciences at the University of Wisconsin-Madison, working on out-of-distribution (OOD) detection in deep learning with <a href="https://nowak.ece.wisc.edu/">Robert Nowak</a> and <a href="http://pages.cs.wisc.edu/~sharonli/">Sharon Yixuan Li</a>. <br> <br> Previously, I was a post-bac researcher at Los Alamos National Laboratory with the CCS-7 (Applied Computer Science) and XCP-8 (Computational Physics Verification & Analysis) groups, where I did applied machine learning research in the areas of physics and high-performance computing. Before that, I got my B.S. in Computer Science from Arizona State University in 2019, along with a B.A. in Spanish. <br> <br> I am broadly interested in exploring the theoretical and statistical foundations of machine learning in order to build models that are robust, interpretable, and uncertainty-aware.
+                    <p class="lead mb-5">I'm a PhD candidate at the University of Wisconsin-Madison, advised by <a href="https://nowak.ece.wisc.edu/">Robert D. Nowak</a>. My interests broadly lie in the mathematical theory of neural networks and deep learning, and connections with applied and computational harmonic analysis, nonparametric regression/function estimation, and compressed sensing. My recent research projects (see <a class="js-scroll-trigger" href="#publications">Publications</a>) have characterized the functional properties and sparsity of neural networks trained with various weight-based regularization strategies.
 
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/julia-nakhleh-64a611117"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/julianakhleh"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://orcid.org/0000-0002-0105-2924"><i class="fab fa-orcid"></i></a>
                         <a class="social-icon" href="https://scholar.google.com/citations?user=hOy5X6MAAAAJ&hl=en"><i class="ai ai-google-scholar"></i></a>
@@ -75,9 +74,10 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Journal Articles</h3>
-                            <p><br><b>J. B. Nakhleh</b>, M. G. Fernández-Godino, M. J. Grosskopf, B. M. Wilson, J. L. Kline, and G. Srinivasan, "Exploring Sensitivity of ICF Outputs to Design Parameters in Experiments Using Machine Learning," in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 7, pp. 2238-2246, July 2021, <a href="https://ieeexplore.ieee.org/document/9466371">doi: 10.1109/TPS.2021.3090299.</a></p>
-                            <p><br>M. G. Fernández-Godino, M. J. Grosskopf, <b>J. B. Nakhleh</b>, B. M. Wilson, J. L. Kline, and G. Srinivasan, "Identifying Entangled Physics Relationships through Sparse Matrix Decomposition to Inform Plasma Fusion Design," in <i>IEEE Transactions on Plasma Science</i>, vol. 49, no. 8, pp. 2410-2419, Aug. 2021, <a href="https://ieeexplore.ieee.org/document/9497511">doi: 10.1109/TPS.2021.3098482.</a></p>
+                            <!-- <h3 class="mb-0">Journal Articles</h3>-->
+                            <p><br><b>Julia B. Nakhleh</b> and Robert D. Nowak. "Global Minimizers of $\ell^p$ Regularized Objectives Yield the Sparsest ReLU Networks." <a href="https://arxiv.org/abs/2505.21791">arXiv preprint.</a></p>
+                            <p><br><b>Julia B. Nakhleh</b>, Joseph Shenouda, and Robert D. Nowak. "A New Neural Kernel Regime: the Inductive Bias of Multi-Task Learning." <i>NeurIPS</i> 2024. <a href="https://proceedings.neurips.cc/paper_files/paper/2024/file/fdff3c4130c24c40c88aa41eb52d2a27-Paper-Conference.pdf">[proceedings]</a>&ensp;<a href="https://arxiv.org/abs/2410.21696">[arXiv]</a></p>
+                            <p><br>Julian J. Katz-Samuels*, <b>Julia B. Nakhleh*</b>, Robert D. Nowak, and Yixuan Li. "Training OOD Detectors in their Natural Habitats." <i>ICML</i> 2022. <a href="https://proceedings.mlr.press/v162/katz-samuels22a/katz-samuels22a.pdf">[proceedings]</a>&ensp;<a href="https://arxiv.org/abs/2202.03299">[arXiv]</a> &emsp; *equal contribution</p>
                         </div>
                     </div>
                 </div>
