--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- <meta name="description" content="Julia Nakhleh's Personal Website" /> -->
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <meta name="google-site-verification" content="39TtCIYymas8QvjzIcIrvU-Z6EYxd2haWul8Ac5h2ME" />
+<!--        <meta name="google-site-verification" content="39TtCIYymas8QvjzIcIrvU-Z6EYxd2haWul8Ac5h2ME" /> -->
 <!--        <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://julianakhleh.github.io/assets/img/profile.jpg" />-->
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Julia Nakhleh's Personal Website" />
         <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website" />
@@ -61,7 +61,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/julianakhleh"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://orcid.org/0000-0002-0105-2924"><i class="fab fa-orcid"></i></a>
-                        <a class="social-icon" href="https://scholar.google.com/citations?user=hOy5X6MAAAAJ&hl=en"><i class="ai ai-google-scholar"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=nTPvqN8AAAAJ&hl=en"><i class="ai ai-google-scholar"></i></a>
                         <!--<a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>-->
                         <!--<a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>-->
                     </div>
